--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         </header>
 
 
-        <section class="folio">
+        <section class="folio clear">
 
             <div class="sect-title">
                 <h2>Portfolio</h2>
